--- a/webapp/index.html
+++ b/webapp/index.html
@@ -82,6 +82,11 @@
         <li>
           <a href="./pages/dapp.html" data-locale="nav-dapp">DApp</a>
         </li>
+        <li class="headerImg">
+          <a href="./pages/center.html">
+            <img src="./images/header.png" alt="" class="header-img">
+          </a>
+        </li>
         <li class="login">
           <a href="./pages/login.html" data-locale="nav-login">登陆</a>
         </li>
