--- a/webapp/pages/about.html
+++ b/webapp/pages/about.html
@@ -78,6 +78,11 @@
         <li>
           <a href="dapp.html" data-locale="nav-dapp">DApp</a>
         </li>
+        <li class="headerImg">
+          <a href="center.html">
+            <img src="../images/header.png" alt="" class="header-img">
+          </a>
+        </li>
         <li class="login">
           <a href="login.html" data-locale="nav-login">登陆</a>
         </li>
@@ -231,22 +236,22 @@
       <section class="container">
         <article class="public-title">
           <h3 class="wow titanimate" data-wow-delay=".5s" data-locale="a-members">BIUT生态成员</h3>
-          <!-- <figure id="openMask">
+          <figure id="openMask">
             <figcaption data-locale="a-members-txt1">
               我也要榜上有名
             </figcaption>
             <img data-original="../images/index/more.png" alt="BIUT-more" title="more">
-          </figure> -->
+          </figure>
         </article>
 
         <section class="foot-members-cont">
           <ul class="row" id="memberList"></ul>
-          <!-- <section class="members-tab" id="membersTab">
+          <section class="members-tab" id="membersTab">
             <figure>
               <figcaption data-locale="a-members-txt2">换一换</figcaption>
               <img src="../images/about/memberRefresh.png" alt="">
             </figure>
-          </section> -->
+          </section>
         </section>
       </section>
       <section class="container-last"></section>
