--- a/webapp/pages/dapp.html
+++ b/webapp/pages/dapp.html
@@ -77,6 +77,11 @@
           <img src="../images/index/nav-check.png" alt="">
           <span data-locale="nav-dapp">DApp</span>
         </li>
+        <li class="headerImg">
+          <a href="center.html">
+            <img src="../images/header.png" alt="" class="header-img">
+          </a>
+        </li>
         <li class="login">
           <a href="login.html" data-locale="nav-login">登陆</a>
         </li>
@@ -101,15 +106,17 @@
         <img src="../images/index/symbol2.png" alt="">
       </section>
 
-      <section class="dapp-down">
-        <a href="">
-          <img src="../images/dapp/windows.png" alt="">
-          <span>Windows</span>
-        </a>
-        <a href="">
-          <img src="../images/dapp/mac.png" alt="">
-          <span>Mac OS</span>
-        </a>
+      <section id="downApp">
+        <section class="dapp-down">
+          <a href="">
+            <img src="../images/dapp/windows.png" alt="">
+            <span>Windows</span>
+          </a>
+          <a href="">
+            <img src="../images/dapp/mac.png" alt="">
+            <span>Mac OS</span>
+          </a>
+        </section>
       </section>
 
       <section class="down-client public-btn" id="downClient">
