--- a/webapp/pages/dynamic.html
+++ b/webapp/pages/dynamic.html
@@ -78,9 +78,16 @@
           <span data-locale="nav-dynamic">dynamic</span>
         </li>
         <li>
-           <a href="dapp.html" data-locale="nav-dapp">DApp</a>
+          <a href="dapp.html" data-locale="nav-dapp">DApp</a>
         </li>
-
+        <li class="headerImg">
+          <a href="center.html">
+            <img src="../images/header.png" alt="" class="header-img">
+          </a>
+        </li>
+        <li class="login">
+          <a href="login.html" data-locale="nav-login">登陆</a>
+        </li>
         <li>
           <span id="i18nZh"> 中文 </span>
           <span class="head-line"> / </span>
@@ -132,9 +139,9 @@
       <!-- New dynamics -->
       <section class="new-dynamics">
         <!-- 功能 子导航栏 -->
-        <article class="public-title">
+        <!-- <article class="public-title">
           <h3 data-locale="h-dyc-tit" class="wow titanimate" data-wow-delay=".5s">New dynamics</h3>
-        </article>
+        </article> -->
 
         <ul class="row" id="newsList"></ul>
 
