--- a/webapp/pages/about-history.html
+++ b/webapp/pages/about-history.html
@@ -77,6 +77,11 @@
         <li>
           <a href="dapp.html" data-locale="nav-dapp">DApp</a>
         </li>
+        <li class="headerImg">
+          <a href="center.html">
+            <img src="../images/header.png" alt="" class="header-img">
+          </a>
+        </li>
         <li class="login">
           <a href="login.html" data-locale="nav-login">登陆</a>
         </li>
@@ -91,65 +96,45 @@
 
   <!-- 网页前部分内容 -->
   <main class="about-container">
+    <section class="first-cnt"></section>
     <section class="container">
       <h2 data-locale="a-h-time">项目计划和发展说明</h2>
-      <ul class="container-list">
+      <ul class="container-list container-bg">
         <li>
           <span data-locale="a-h-time-txt1">时间</span>
           <span data-locale="a-h-time-txt2">进展或计划</span>
         </li>
-        <li>
-          <span>2017年12月</span>
-          <span>共识算法和网络方案</span>
-        </li>
-        <li>
-          <span>2017年12月</span>
-          <span>
-            实现区块链生成库，包括交易链及Token链的生成库，将P2P网络节点通讯与区块链生成进行结合完成节点群落分组算法和轮循机制
-            实现区块链生成库，包括交易链及Token链的生成库，将P2P网络节点通讯与区块链生成进行结合完成节点群落分组算法和轮循机制
-          </span>
-        </li>
-        <li>
-          <span>2017年12月</span>
-          <span>共识算法和网络方案</span>
-        </li>
       </ul>
+      <ul class="container-list" id="timeDetails"></ul>
+
+    </section>
+    <section class="last-cnt">
       <section class="container-time">
-        <ul class="time-list">
-          <li>
+        <ul class="time-list" id="timeLists">
+          <li class="time-check">
             <section class="time-round">
-              <span></span>
+              <img src="../images/about/aboutC.png" alt="">
               <span></span>
             </section>
-            <span>2014</span>
+            <span>2017</span>
           </li>
           <li>
-            <section class="time-round2">
-              <span></span>
-              <span></span>
-            </section>
-            <span>2014</span>
-          </li>
-
-          <li>
-            <section class="time-round2">
-              <span></span>
+            <section class="time-round time-round2">
+              <img src="../images/about/aboutRs.png" alt="">
               <span></span>
             </section>
-            <span>2014</span>
+            <span>2018</span>
           </li>
 
           <li>
-            <section class="time-round3">
-              <span></span>
-              <span></span>
+            <section class="time-round time-round2">
+              <img src="../images/about/aboutRs.png" alt="">
             </section>
-            <span>2014</span>
+            <span>2019</span>
           </li>
         </ul>
       </section>
     </section>
-
   </main>
 
   <main class="public-footer">
